Snapshot 6df1f3eca5

* #3506: LL and server plugins are mutually exclusive for trial-3 (dcbw)

Snapshot 46898a3e00

* Adapt to sugar API change (marco)

Snapshot b8d04713ac

* #3380: de-restrict invitations so non-initiator can invite people to an
  activity (only effective if you also have Gabble trial3a 20070912 snapshot)
  (smcv)
* #3369: avoid Gabble invite-only activities disappearing from the
  mesh view when we join them (smcv)
* #3370: fix error reporting in logs by working around dbus-python bug#12403
  (smcv)

Snapshot bff163d57b

* #3328: when we join an activity on Salut, don't stop it from being
  the other participants' current activity (smcv)
* #3327: don't let a slower connection manager delete current activity
  advertised by a faster one (smcv)
* #2299: Be sure buddies keys are converted to string (cassidy)
* #3291: Further improve activity participant tracking (smcv)
* Correctly pick up existing Salut connections (smcv)
* Don't crash if a buddy property is None (smcv)
* #3290: When a buddy goes offline, consider them to have left all their
  activities (smcv)

Snapshot 3ed091301b

* Improve tracking of who's in activities with us (smcv)
* Refactor joining/sharing so we don't claim to have succeeded,
  or try to SetProperties(), until we're actually in the chatroom
  (fixes regression with Salut darcs HEAD) (smcv)

Snapshot 3b1f4a0c42

* #3147: Set _PROP_CURACT to current activity when sharing an activity
  or joining (morgs)

Snapshot a79f7b6488

* Fix non-ASCII activity names (smcv)
* Notify local processes when we change an activity name, so the mesh
  view can update (smcv)
* Fix bug where activities initially had empty title in mesh view (smcv)

Snapshot 25218b4642

* Support invitations and non-public activities (smcv)
* Support mutable name/tags/color/private properties (smcv)

Snapshot 1c58a0be88

* Update LinkLocal plugin's protocol to "local-xmpp"

Snapshot 970ca27db7

* Make buddy-left async (morgs)

Snapshot 8dc589f5b0
