@@ -1,3 +1,6 @@
+* #3465: don't keep invite-only activities in the mesh view after we leave
+  them (smcv)
+
 Snapshot 6df1f3eca5
 
 * #3506: LL and server plugins are mutually exclusive for trial-3 (dcbw)
